Font and contents

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>김나윤 첫돌잔치 초대장</title>
+    <link href="https://cdn.jsdelivr.net/gh/webfontworld/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'GmarketSansMedium', sans-serif;
             background-color: #fff8f0;
             color: #333;
             text-align: center;
@@ -82,7 +83,7 @@
             정성껏 준비했으니 부디 바쁘시더라도 참석해주시면 큰 기쁨이 되겠습니다 🙏
         </p>
 
-        <p><strong>📅 일시:</strong> 2025년 7월 26일 (토) 오후 6시<br>
+        <p><strong>📅 일시:</strong> 2025년 7월 26일 (토) 오후 12시<br>
         <strong>📍 장소:</strong> 서울 반얀트리 페스타 바이 민구(2층) PDR4</p>
 
         <div class="map-links">
